Turtleopdracht.txt
Python 3.8.5 (tags/v3.8.5:580fbb0, Jul 20 2020, 15:43:08) [MSC v.1926 32 bit (Intel)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> import turtle
>>> turtle.setup(400, 400, 0, 0)
>>> python3 -m turtledemo.py
  File "<stdin>", line 1
    python3 -m turtledemo.py
               ^
SyntaxError: invalid syntax
>>> turtle.left(90)
>>> turtle.forward(100)
>>> turtle.right(90)
>>> turtle.forward(100)
>>> turtle.right(90)
>>> turtle.forward(100)
>>> turtle.right(45)
>>> turtle.forward(50)
>>> turtle.forward(25)
>>> turtle.right.(90)
  File "<stdin>", line 1
    turtle.right.(90)
                 ^
SyntaxError: invalid syntax
>>> turtle.right(90)
>>> turtle.forward(75)
>>> turtle.right(45)
>>> turtle.right(90)
>>> turtle.forward(100)
>>> turtle.forward(10)
>>> turtle.left(135)
>>> turtle.forward(100)
>>> turtle.forward(30)
>>> turtle.forward(10)
>>> turtle.forward(5)
>>> turtle.left(45)
>>> turtle.forward(100)
>>> turtle.right(135)
>>> turtle.forward(100)
>>> turtle.right(45)
>>> turtle.right(45)
>>> turtle.forward(100)
>>> turtle.right(90
... )
>>> turtle.right(45)
>>> turtle.forward(100)
>>> turtle.left(90)
>>> turtle.forward(200)
>>> turtle.left(90)
>>> turtle.forward(200)
>>> turtle.left(90)
>>> turtle.forward(100)
>>> turtle.left(90)
>>> turtle.forward(50)
>>> turtle.left(90)
>>> turtle.forward(5)
>>> turtle.left(90)
>>> turtle.right(180
... )
>>> turtle.forward(200)
>>> turtle.right(180)
>>> turtle.forward(100)
>>> turtle.right(90)
>>> turtle.right(180)
>>> turtle.forward(10)
>>> turtle.color("red", "green")
>>> turtle.forward(100)
>>> turtle.right(90)
>>> turtle.forward(100)
>>> turtle.right(90)
>>> turtle.forward(100)
>>> turtle.right(90)
>>> turtle.forward(100)
>>> turtle.right(90)
>>> turtle.right(180)
>>> turtle.forward(100)
>>> turtle.right(135)
>>> turtle.right(90)
>>> turtle.forward(100)
>>> turtle.forward(75)
>>> turtle.forward(50)
>>> turtle.forward(50)
>>> turtle.right(135)
>>> turtle.left(90)
>>> turtle.left(180)
>>> turtle.forward(120)
>>>